# Mathematics

./: README.md  experiement.ipynb  f1.py  test.ipynb  vf1.py
SRC/: pyproject.toml
SRC/f1/: __init__.py
