[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1"
version = "0.0.1"
authors = [
  { name="Eleazar Neamat", email="eleazarneamat1@gmail.com" },
]
description = " An F1 Vector Spaces Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/neleazar/Mathematics"